convert tests to java8 language level